# Ministries_Scheduler

./: .gitignore  Ministries_Scheduler.py  README.md  copy_wasm.sh  run_flask.sh
scheduler_backend/: README.md  backend.py
scheduler_frontend/: CMakeLists.txt  README.md  main.cpp  main.qml  qtquickcontrols2.conf
scheduler_frontend/controllers/: mastercontroller.cpp  mastercontroller.h  websocketcontroller.cpp  websocketcontroller.h
scheduler_frontend/views/: management.qml
